--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
   "CURRENT_LANGUAGE": "EN",
-  "HEADER": "It is header"
+  "HEADER": "It is header",
+  "NOT_FOUND": "This page is unfortunately not found.",
+  "MAIN_PAGE_LINK": "Main",
+  "ABOUT_PAGE_LINK": "About us"
 }
