--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,10 @@
 {
   "CURRENT_LANGUAGE": "EN",
   "HEADER": "It is header",
-  "NOT_FOUND": "This page is unfortunately not found.",
+  "TOGGLE_WIDTH_SIDEBAR": "Toggle width",
+  "NOT_FOUND": "This page is unfortunately not found",
   "MAIN_PAGE_LINK": "Main",
-  "ABOUT_PAGE_LINK": "About us"
+  "ABOUT_PAGE_LINK": "About us",
+  "ERROR_BLOCK_TITLE": "Something went wrong",
+  "ERROR_BLOCK_BTN": "Reload app"
 }
