--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
   "CURRENT_LANGUAGE": "EN",
-  "HEADER": "It is header",
-  "TOGGLE_WIDTH_SIDEBAR": "Toggle width",
+  "PROJECT_NAME": "Social network",
+  "AUTHORIZE_BTN": "Authorize",
+  "AUTHORIZE_TITLE": "Sign in or sign up",
   "NOT_FOUND": "This page is unfortunately not found",
   "MAIN_PAGE_LINK": "Main",
   "ABOUT_PAGE_LINK": "About us",
