--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,8 @@
 {
   "CURRENT_LANGUAGE": "RU",
-  "HEADER": "Это хедер",
-  "TOGGLE_WIDTH_SIDEBAR": "Переключить ширину",
+  "PROJECT_NAME": "Социальная сеть",
+  "AUTHORIZE_BTN": "Авторизоваться",
+  "AUTHORIZE_TITLE": "Авторизация",
   "NOT_FOUND": "Такой страницы не найдено :(",
   "MAIN_PAGE_LINK": "Главная",
   "ABOUT_PAGE_LINK": "Страница о нас",
