feat/#25: add EfficiencyPage

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "NOT_FOUND": "Такой страницы не найдено :(",
   "MAIN_PAGE_LINK": "Главная",
   "ABOUT_PAGE_LINK": "Страница о нас",
+  "EFFICIENCY_PAGE_LINK": "Продуктивность",
   "ERROR_BLOCK_TITLE": "Что-то пошло не так",
   "ERROR_BLOCK_BTN": "Перезапустить приложение"
 }
