--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,7 @@
   "NOT_FOUND": "This page is unfortunately not found",
   "MAIN_PAGE_LINK": "Main",
   "ABOUT_PAGE_LINK": "About us",
+  "EFFICIENCY_PAGE_LINK": "Efficiency",
   "ERROR_BLOCK_TITLE": "Something went wrong",
   "ERROR_BLOCK_BTN": "Reload app"
 }
