--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,8 +5,10 @@
   "AUTHORIZE_TITLE": "Авторизация",
   "NOT_FOUND": "Такой страницы не найдено :(",
   "MAIN_PAGE_LINK": "Главная",
-  "ABOUT_PAGE_LINK": "Страница о нас",
+  "PROFILE_PAGE_LINK": "Мой профиль",
   "EFFICIENCY_PAGE_LINK": "Продуктивность",
+  "SKILLS_PAGE_LINK": "Способности",
+  "ABOUT_PAGE_LINK": "Страница о нас",
   "ERROR_BLOCK_TITLE": "Что-то пошло не так",
   "ERROR_BLOCK_BTN": "Перезапустить приложение"
 }
