--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,11 +4,12 @@
   "AUTHORIZE_BTN": "Authorize",
   "AUTHORIZE_TITLE": "Sign in or sign up",
   "NOT_FOUND": "This page is unfortunately not found",
+  "ERROR_BLOCK_TITLE": "Something went wrong",
+  "ERROR_BLOCK_BTN": "Reload app",
+  "CURRENT_LEVEL": "My current level in frontend: ",
   "MAIN_PAGE_LINK": "Main",
   "PROFILE_PAGE_LINK": "My profile",
   "EFFICIENCY_PAGE_LINK": "Efficiency",
   "SKILLS_PAGE_LINK": "Skills",
-  "ABOUT_PAGE_LINK": "About us",
-  "ERROR_BLOCK_TITLE": "Something went wrong",
-  "ERROR_BLOCK_BTN": "Reload app"
+  "ABOUT_PAGE_LINK": "About us"
 }
